# ICR_code

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: base.yaml  high_compute.yaml
docs/: CLONE_TO_DATASET_DOWNLOAD_AND_RUN.md
src/icr/: __init__.py  cli.py  config.py
src/icr/data/: clean.py  kaggle_download.py  load.py  split.py  validate.py
src/icr/evaluation/: agreement.py  compare.py  metrics.py  plots.py
src/icr/explanation/: compare_explanations.py  lime_explainer.py  shap_explainer.py
src/icr/models/: calibrate.py  registry.py  train.py
src/icr/reporting/: build_report.py  tables.py
src/icr/scalability/: batch_explain.py  benchmark.py
src/icr/stability/: bootstrap.py  perturbation.py  rank_correlation.py
src/icr/utils/: io.py  seed.py  timing.py
tests/: test_metrics.py  test_split.py
